openshift/routes/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  to:
    kind: Service
    name: api-gateway
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
